objects/OSM_Maintenance_Message__c.object
<CustomObject>
    <fields>
        <fullName>Custom_Maintenance_Message__c</fullName>
        <label>Custom Maintenance Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Show_Custom_Message__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Shows custom maintenance message</description>
        <label>Show Custom Message</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>System_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>System Available</label>
        <type>Checkbox</type>
    </fields>
    <label>Marketplace Maintenance Message</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Custom_Messages</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Show_Custom_Message__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Custom Messages</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Marketplace Maint Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketplace Maintenance Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>